Fix form section spacing

--- a/style.css
+++ b/style.css
@@ -310,6 +310,7 @@ body {
   align-items: center;
   text-align: center;
   color: #9390ff;
+  margin-top: 120px;
 }
 
 .contact-form p:first-of-type {
@@ -386,6 +387,7 @@ body {
   align-items: center;
   justify-content: center;
   gap: 10px;
+  margin-bottom: 150px;
 }
 
 /* popup -------------------------------------------------------------------- */
